Fix band overflow

--- a/source/sass/components/@health/_health-band.scss
+++ b/source/sass/components/@health/_health-band.scss
@@ -58,6 +58,7 @@
         @include AU-space(padding, 2unit);
         @include border-radius();
         @include box-shadow();
+        overflow: hidden;
       }
     }
 
